Lost last commint. Redoing evreything again

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ MMX_Compendium.out
 MMX_Compendium.pfd
 MMX_Compendium.toc
 MMX_Compendium.synctex.gz
+MMX_Compendium.aux
+MMX_Compendium.aux
+MMX_Compendium.log
+MMX_Compendium.pdf
+MMX_Compendium.synctex.gz
+MMX_Compendium.toc
